[package]
name = "singlegame"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


actix = "0.12.0"
actix-web = "4.0.0-beta.8"
actix-cors = "0.6.0-beta.2"
actix-web-actors = "4.0.0-beta.6"
tokio = { version = "^1.3", features = ["full"] }

chessengine = { git = "https://github.com/guccialex/ccp-game/" }


[profile.release]
panic = 'abort'